--- a/README
+++ b/README
@@ -8,6 +8,8 @@ Link: https://united-open.vercel.app/
 
 ## 📷 Imagens
 
-![logo](https://github.com/elguesabal/UNITED-OPEN/assets/113626409/ee3e92dd-a7b6-48a7-9530-bbcf87ffbd33)
-![site](https://github.com/elguesabal/UNITED-OPEN/assets/113626409/fdbe882b-e4cf-4b35-8893-1af68e6f3685)
-![united open](https://github.com/elguesabal/UNITED-OPEN/assets/113626409/74381d65-1f46-4773-957d-dae4d2699fcc)
+<div align="center">
+    <img src="https://github.com/elguesabal/UNITED-OPEN/assets/113626409/ee3e92dd-a7b6-48a7-9530-bbcf87ffbd33" />
+    <img src="https://github.com/elguesabal/UNITED-OPEN/assets/113626409/ee3e92dd-a7b6-48a7-9530-bbcf87ffbd33" />
+    <img src="https://github.com/elguesabal/UNITED-OPEN/assets/113626409/ee3e92dd-a7b6-48a7-9530-bbcf87ffbd33" />
+</div>
